# crac-client

./: README.md  pyproject.toml
crac_client/: app.py  config.ini  config.py  gui.py  gui_constants.py  jobs.py  logger.py  logging.conf  streaming.py
crac_client/converter/: button_converter.py  camera_converter.py  converter.py  curtains_converter.py  roof_converter.py  telescope_converter.py
crac_client/retriever/: button_retriever.py  camera_retriever.py  curtains_retriever.py  retriever.py  roof_retriever.py  telescope_retriever.py
crac_client/templates/: index.html
locales/: base.pot
locales/it/LC_MESSAGES/: base.mo  base.po
